New network link
Signed-off-by: Daniele Ricci <daniele.athome@gmail.com>

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 					<div class="thirteen columns">
 						<h3>Free. Forever.</h3>
 						    <blockquote>
-						    Kontalk relies on a <a href="https://github.com/kontalk/network/wiki">network of servers</a> run by volunteers to provide a stable and secure service
+						    Kontalk relies on a <a href="https://www.kontalk.net/">network of servers</a> run by volunteers to provide a stable and secure service
 						    for all of Kontalk users. Because of that, Kontalk will always remain <strong>free</strong>.
 						    </blockquote>
 					</div>
