--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
 	<link rel="stylesheet" href="stylesheets/font-awesome.css">
 	<!-- Sliders Style -->
 	<link href="stylesheets/jquery.bxslider.css" rel="stylesheet" />
+	<!-- Extra Style -->
+	<link href="stylesheets/extra.css" rel="stylesheet" />
 
 	<!--[if lt IE 9]>
 		<script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -45,7 +47,13 @@
 </head>
 <body>
 
-
+<div class="alert">
+<div class="container">
+<div class="info-box eight columns">
+<a href="https://forum.kontalk.org/">Kontalk community forum is live!</a>
+</div>
+</div>
+</div>
 
 	<!-- Primary Page Layout
 	================================================== -->
@@ -180,6 +188,7 @@
                             <ul>
                             <li><a class="footerlink" href="https://github.com/kontalk/androidclient/wiki">Help</a></li>
                             <li><a class="footerlink" href="https://www.kontalk.net/">The network</a></li>
+                            <li><a class="footerlink" href="https://forum.kontalk.org/">Forum</a></li>
                             </ul>
                         </div>
 			<div class="social four columns"><!-- Social Buttons -->
