Desktop client button
Signed-off-by: Daniele Ricci <daniele.athome@gmail.com>

--- a/index.html
+++ b/index.html
@@ -66,11 +66,9 @@
 				<div class="intro-text eleven columns"><!-- Intro -->
 					<h3>A new way of communicating.</h3>
                                         <div>
-                                                <a href="https://play.google.com/store/apps/details?id=org.kontalk"><img src="images/google_play.png" height="80"></a>
-                                                <a href="https://f-droid.org/app/org.kontalk"><img src="images/fdroid.png" height="80"></a>
-                                        </div>
-                                        <div>
-                                            <a href="https://github.com/kontalk/desktopclient-java/releases">&raquo; Desktop client</a>
+                                                <a title="Get Kontalk for Android on Google Play" href="https://play.google.com/store/apps/details?id=org.kontalk"><img src="images/google_play.png" height="80"></a>
+                                                <a title="Get Kontalk for Android on F-Droid" href="https://f-droid.org/app/org.kontalk"><img src="images/fdroid.png" height="80"></a>
+                                                <a title="Get Kontalk for your computer" href="https://github.com/kontalk/desktopclient-java/releases"><img src="images/desktop_client.png" height="80"></a>
                                         </div>
 				</div><!-- End Intro -->
 			</div>
