--- a/index.html
+++ b/index.html
@@ -200,7 +200,10 @@
 		</div>
 		<div class="container">
                     <div class="eleven columns offset-by-one"><!-- Copyright -->
-                        <p>Kontalk devteam &copy; 2015</p>
+                        <p>
+                        Kontalk devteam &copy; 2016 &mdash;
+                        The Windows and Apple logos are respective trademarks of Microsoft Corporation and Apple Corporation.
+                        </p>
                     </div>
 		</div>
 	</footer><!-- End Footer -->
