Add desktop client button at the bottom
Signed-off-by: Daniele Ricci <daniele.athome@gmail.com>

--- a/index.html
+++ b/index.html
@@ -164,11 +164,14 @@
 	</section><!-- End Testimonials -->
 	<section id ="store">
 		<div class="container">
-                        <div class="picture team-member seven columns">
-                                <a href="https://play.google.com/store/apps/details?id=org.kontalk"><img src="images/google_play.png" height="80"></a>
+                        <div class="picture team-member five columns">
+                                <a title="Get Kontalk for Android on Google Play" href="https://play.google.com/store/apps/details?id=org.kontalk"><img src="images/google_play.png" height="80"></a>
                         </div>
-			<div class="picture team-member seven columns">
-                                <a href="https://f-droid.org/app/org.kontalk"><img src="images/fdroid.png" height="80"></a>
+			<div class="picture team-member five columns">
+                                <a title="Get Kontalk for Android on F-Droid" href="https://f-droid.org/app/org.kontalk"><img src="images/fdroid.png" height="80"></a>
+			</div>
+			<div class="picture team-member five columns">
+                                <a title="Get Kontalk for your computer" href="https://github.com/kontalk/desktopclient-java/releases"><img src="images/desktop_client.png" height="80"></a>
 			</div>
 			<!--
 			<div class="picture team-member five columns">
