--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 	<!-- Basic Page Needs
   ================================================== -->
 	<meta charset="utf-8">
-	<title>Kontalk - Community-driven instant messaging network</title>
-	<meta name="description" content="Community-driven instant messaging network"/>
+	<title>Kontalk - Community-driven Instant Messaging Network</title>
+	<meta name="description" content="Community-driven Instant Messaging Network"/>
 	<meta name="keywords" content="kontalk, smartphone, messaging, sms, instant messaging, decentralized network, free messaging network"/>
 	<meta name="author" content="Kontalk devteam">
 
@@ -50,7 +50,7 @@
 <div class="alert">
 <div class="container">
 <div class="info-box eight columns">
-<a href="https://forum.kontalk.org/">Kontalk community forum is live!</a>
+<a href="https://forum.kontalk.org/">Kontalk community forum is LIVE!</a>
 </div>
 </div>
 </div>
